--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
-spring.datasource.url=jdbc:h2:tcp://localhost/~/test      
-spring.datasource.driver-class-name=org.h2.Driver
+# JPA
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
+
+# datasource
+spring.datasource.url=jdbc:mysql://localhost:3306/wai
+spring.datasource.username=wai
+spring.datasource.password=wai
+spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+#spring.datasource.driver-class-name=org.h2.Driver
