--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 
+# logging
+logging.level.root=info
+
 # datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/wai
 spring.datasource.username=wai
