--- a/build.gradle
+++ b/build.gradle
@@ -21,66 +21,43 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'junit:junit:4.13.1'
 
-	/* lombok */
-	implementation 'org.projectlombok:lombok'
-	annotationProcessor 'org.projectlombok:lombok'
-
 	implementation 'mysql:mysql-connector-java'
 	implementation 'com.h2database:h2'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 
+	/* lombok */
+	implementation 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+
 	/* QueryDSL */
 	implementation 'com.querydsl:querydsl-jpa'
 	implementation 'com.querydsl:querydsl-apt'
+	implementation 'com.querydsl:querydsl-core'
 
 	/* logback */
 	implementation('org.slf4j:jcl-over-slf4j')
 	implementation('ch.qos.logback:logback-classic')
 
-	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa"
+	// annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa"
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 }
 
-// QueryDSL
-//sourceSets {
-//	main {
-//		java {
-//			srcDirs = ["$projectDir/src/main/java", "$projectDir/build/generated"]
-//		}
-//	}
-//}
-
-test {
-	useJUnitPlatform()
-}
-
-
-def generated = "src/main/generated"
-
-sourceSets {
-	main.java.srcDirs += [ generated ]
-}
-
-tasks.withType(JavaCompile) {
-	options.annotationProcessorGeneratedSourcesDirectory = file(generated)
-}
-
-clean.doLast {
-	file(generated).deleteDir()
-}
+// def querydslDir = "$buildDir/generated/querydsl"
+def querydslDir = "$projectDir/src/main/generated"
 
 querydsl {
-	querydslDefault = true
 	jpa = true
+	querydslSourcesDir = querydslDir
 }
 
-configurations {
-	querydsl.extendsFrom implementation
-}
+sourceSets { main.java.srcDir querydslDir }
 
-compileQuerydsl {
-	options.annotationProcessorPath = configurations.querydsl
-}
+configurations { querydsl.extendsFrom compileClasspath }
+
+compileQuerydsl { options.annotationProcessorPath = configurations.querydsl }
+
+/** * comileQuerydsl.doFirst 추가 */
+compileQuerydsl.doFirst { if(file(querydslDir).exists() ) delete(file(querydslDir)) }
