--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,13 @@ spring.jpa.hibernate.ddl-auto=none
 
 # logging
 logging.level.root=info
+logging.level.org.hibernate.type=trace
 
 # datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/wai
 spring.datasource.username=wai
 spring.datasource.password=wai
-spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 #spring.datasource.url=jdbc:h2:tcp://localhost/~/test
 #spring.datasource.driver-class-name=org.h2.Driver
