--- a/build.gradle
+++ b/build.gradle
@@ -17,15 +17,12 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	//implementation 'org.springframework.boot:spring-boot-starter-jdbc'	// jdbc
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'junit:junit:4.13.1'
 
 	implementation 'mysql:mysql-connector-java'
 	implementation 'com.h2database:h2'
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 	/* lombok */
 	implementation 'org.projectlombok:lombok'
@@ -33,31 +30,30 @@ dependencies {
 
 	/* QueryDSL */
 	implementation 'com.querydsl:querydsl-jpa'
-	implementation 'com.querydsl:querydsl-apt'
-	implementation 'com.querydsl:querydsl-core'
 
-	/* logback */
-//	implementation('org.slf4j:jcl-over-slf4j')
-//	implementation('ch.qos.logback:logback-classic')
+	/* log */
+	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
 
-	// annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa"
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 }
 
-// def querydslDir = "$buildDir/generated/querydsl"
-def querydslDir = "$projectDir/src/main/generated"
-
+//querydsl 추가 시작
+def querydslDir = "$buildDir/generated/querydsl"
 querydsl {
 	jpa = true
 	querydslSourcesDir = querydslDir
 }
-
-sourceSets { main.java.srcDir querydslDir }
-
-configurations { querydsl.extendsFrom compileClasspath }
-
-compileQuerydsl { options.annotationProcessorPath = configurations.querydsl }
+sourceSets {
+	main.java.srcDir querydslDir
+}
+configurations {
+	querydsl.extendsFrom compileClasspath
+}
+compileQuerydsl {
+	options.annotationProcessorPath = configurations.querydsl
+}
+//querydsl 추가 끝
 
 /** * comileQuerydsl.doFirst 추가 */
 compileQuerydsl.doFirst { if(file(querydslDir).exists() ) delete(file(querydslDir)) }
