--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -9,17 +9,14 @@ logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type=trace
 
 # datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/wai
-spring.datasource.username=wai
-spring.datasource.password=wai
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.jackson.default-property-inclusion = NON_NULL
-
-
-# 더미데이터 테이블 생성
-#spring.datasource.schema=classpath:test/h2/schema.sql
 # 더미데이터 생성
 #spring.datasource.data=classpath:h2/data.sql
 # 더미 데이터 생성 설정 always : 서버 재기동 마다 schema, data 새로 생성
 #spring.datasource.initialization-mode=always
+
