--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -2,6 +2,7 @@
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.default_batch_fetch_size=1000
 
 # logging
 logging.level.root=info
