--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -2,11 +2,13 @@
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.default_batch_fetch_size=1000
 
 # logging
-logging.level.root=info
-logging.level.org.hibernate.SQL=debug
-logging.level.org.hibernate.type=trace
+#logging.level.root=info
+#logging.level.org.hibernate.SQL=debug
+#logging.level.org.hibernate.type=trace
+
 
 # datasource
 spring.datasource.url=jdbc:h2:tcp://localhost/~/test
