--- a/build.gradle
+++ b/build.gradle
@@ -15,27 +15,42 @@ repositories {
 }
 
 dependencies {
+	/* basic */
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'junit:junit:4.13.1'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+	/* DB, JPA */
 	implementation 'mysql:mysql-connector-java'
 	implementation 'com.h2database:h2'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	/* QueryDSL */
+	implementation 'com.querydsl:querydsl-jpa'
+
+	/* security */
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	testImplementation 'org.springframework.security:spring-security-test'
+//	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	implementation "javax.xml.bind:jaxb-api"
+
+	/* jjwt */
+	compile 'io.jsonwebtoken:jjwt-api:0.11.2'
+	runtime 'io.jsonwebtoken:jjwt-impl:0.11.2'
+	runtime 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 
 	/* lombok */
 	implementation 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
-	/* QueryDSL */
-	implementation 'com.querydsl:querydsl-jpa'
-
 	/* log */
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
 
 	/* model mapper */
-	 compile 'org.modelmapper:modelmapper:3.0.0'
+	implementation 'org.modelmapper:modelmapper:3.0.0'
+
+	/* etc */
+	implementation 'org.apache.commons:commons-lang3'
 
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
