--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,6 @@ repositories {
 
 dependencies {
 	/* basic */
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
@@ -51,6 +50,7 @@ dependencies {
 
 	/* etc */
 	implementation 'org.apache.commons:commons-lang3'
+	implementation 'commons-fileupload:commons-fileupload:1.4'
 
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
