user profile image
- user profile image upload (유저 프로필사진 업로드 기능 추가)

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -18,7 +18,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.schema=classpath:dummyData.sql
 
 # jackson
-spring.jackson.default-property-inclusion = NON_NULL
+spring.jackson.default-property-inclusion=NON_NULL
 
 # image upload
 spring.servlet.multipart.location=c:\\Temp\\upload
