--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -3,6 +3,7 @@ spring.application.name=wai
 # JPA
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.default_batch_fetch_size=1000
+spring.jpa.properties.hibernate.dialect=com.wai.common.dialect.CustomMySqlDialect
 
 # p6spy
 decorator.datasource.p6spy.enable-logging=true
