--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,17 +1,19 @@
+spring.application.name=wai_test
+
 # JPA
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.default_batch_fetch_size=1000
+spring.jpa.properties.hibernate.dialect=com.wai.common.dialect.CustomMySqlDialect
 
 # p6spy
 decorator.datasource.p6spy.enable-logging=true
 decorator.datasource.p6spy.multiline=true
 
 # datasource
-spring.datasource.url=jdbc:h2:tcp://localhost/~/test
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:mysql://localhost:3306/wai_test
+spring.datasource.username=wai_test
+spring.datasource.password=wai_test
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # jackson
 spring.jackson.default-property-inclusion=NON_NULL
